# py-minimax-games

./: .gitignore  README.md  pyproject.toml
src/minimax_games/games/tic_tac_toe/: __main__.py  game.py  node.py
src/minimax_games/games/wordle/: __main__.py  game.py  node.py
src/minimax_games/search/: alphabeta.py
